--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;      /* Firefox */
 }
 
 @layer base {
